# Tome

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md  setbuildarea_reference
.claude/: settings.local.json
data/: banners.yaml  districts_names.yaml  npcs.yaml  open_space_names.yaml  road_names.yaml  rooms.yaml  settlement_names.yaml
data/forests/: birch_forest.json  mixed_forest.json  oak_forest.json  pine_forest.json  small_mixed.json
data/furniture/: house.yaml  industrial.yaml  loot.yaml  storage.yaml
data/materials/: oak_planks.json
data/paint_palettes/: palettes.yaml
data/palettes/: resource_base.json  test1.json  test2.json  wall_base.json
data/resource_chains/: animal_names.yaml  biome_resources.yaml  biome_resources_ideas.yaml  production_painters.yaml  recipes.yaml  recipes_ideas.yaml  resources.yaml  resources_ideas.yaml
data/structures/: bedroom1.json  test_save.nbt  well.json
docs/: README.md  Untitled.canvas  architecture.md  buildings.md  districts.md  editor.md  http-api.md  materials.md  parcels.md
docs/.obsidian/: workspace.json
docs/analysis/: resource_chain_log_analysis.md  run-observations-2026-06-17.md
docs/buildings/: culture.md  floors.md  footprint.md  foundation.md  frame.md  furnish.md  pipeline.canvas  roof.md  rooms.md  walls.md
docs/plans/: buildings.md  buildings_v2.md  city_house_placement.md  composite_roofs.md  district_size_balancing.md  district_subdivision.md  editor-refcell-refactor.md  gate_placement.md  jetty_phase3.md  parcel_size_balancing.md  parcel_subdivision.md  placement.md  production_area.md  resource_building_placement.md  resource_chains.md  road_hierarchy.md  rural_roads.md  ship-builder-v2.md  ship-builder.md  urban_classification_findings.md  water-district.md
scripts/: gen_nbt_json.py
src/: config.rs  main.rs
src/ai/: ai.rs  mod.rs  test.rs
src/data/: loadable.rs  mod.rs  snbt.rs
src/editor/: editor.rs  mod.rs  placer.rs  test.rs  tests.rs  world.rs
visualizer/: package-lock.json
(+618 files in other folders)
