[package]
name = "Tome"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
fastnbt = "2.5.0"
fastsnbt = "0.2.0"
flate2 = "1.1.1"
futures = "0.3.31"
lerp = "0.5.0"
log = "0.4.27"
noise = "0.9.0"
openai = "1.1.1"
reqwest = {version = "0.12.15", features = ["blocking"]}
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
schemars = "0.8.22"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = {version = "1.44.2", features = ["full"]}

# Optional visualizer dependencies
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
chrono = "0.4.44"

[features]
visualizer = ["axum", "tower-http"]
